Resolve #4571 Added property -webkit-overflow-scrolling to touch

--- a/src/scss/_dropdown.scss
+++ b/src/scss/_dropdown.scss
@@ -24,6 +24,7 @@
   list-style: none;
   margin: 0;
   padding: 0;
+  -webkit-overflow-scrolling: touch;
 }
 
 .select2-results__option {
